# issue-solver-bots

./: .coverage  .gitignore  AGENTS.md  CLAUDE_CODE_INTEGRATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  check_toto.py  coverage.xml  verify_nextauth_changes.js  verify_nextauth_changes.py  verify_readme_updates.py  verify_toto.py
issue-solver/: .coveragerc  .env.example  .gitignore  0001-fix-anthropic-agent-with-tools.patch  CONTRIBUTING.md  README.md  VECTOR_STORE_CLEANUP.md  alembic.ini  docker-compose.yml  justfile  production_vector_stores.csv  pyproject.toml  test_implementation.py  webapi.Dockerfile  worker.Dockerfile
issue-solver/docs/: engineering-notes.md
issue-solver/reports/: README.md  vector_store_cleanup_20250807_180128.json  vector_store_cleanup_20250807_222234.json  vector_store_cleanup_20250809_050016.json  vector_store_cleanup_20250810_180918.json  vector_store_cleanup_20250811_172409.json  vector_store_cleanup_20251208_190434.json  vector_store_plan_20250807_172956.json  vector_store_plan_20250810_132348.json
issue-solver/scripts/: VECTOR_STORE_CLEANUP.md  create_base_cudu_snapshot.py  create_snapshot.py  export_notion_mcp_client.py  notion_mcp_oauth_flow.py  notion_mcp_refresh.py  notion_mcp_test_tool.py  production_vector_stores.csv  setup_cudu_cli_on_debian.sh  vector_store_cleanup.py
issue-solver/src/: test_token_analyzer.py
issue-solver/src/issue_solver/: __init__.py  app_settings.py  clock.py  dev_environments_management.py  factories.py  logging_config.py  start_resolution.py
issue-solver/tests/: controllable_clock.py  fixtures.py  test_app_settings.py  test_solve_issue.py
issue-solver/tests/agents/: conftest.py  test_claude_code_agent.py  test_supported_agents.py  test_swe_agents_on_docker.py
issue-solver/tests/blobs/: conftest.py  test_s3_knowledge_repo.py
issue-solver/tests/cli/: conftest.py  test_index_repository_command.py  test_init_agent_message_store.py  test_solve_command_settings.py  test_webhook_notifying_event_store.py
issue-solver/tests/database/: conftest.py  test_postgres_agent_message_store.py  test_postgres_event_store.py
issue-solver/tests/events/: conftest.py  test_auto_documentation.py  test_get_connected_repo_event.py  test_notion_integration.py  test_notion_mcp_refresh.py  test_serializable_documentation_generation.py  test_token_encryption.py
issue-solver/tests/examples/: happy_path_persona.py
issue-solver/tests/git_operations/: test_git_helper.py  test_git_validation.py
issue-solver/tests/indexing/: test_openai_repository_indexer.py
issue-solver/tests/issue_trackers/: test_api_based_issue_tracker_settings.py  test_github_issue_tracker.py  test_gitlab_issue_tracker.py  test_issue_tracker_settings.py  test_notion_tracker.py  test_trello_issue_tracker.py
issue-solver/tests/queueing/: conftest.py  test_sqs_queueing_event_store.py
issue-solver/tests/streaming/: conftest.py  test_streaming_agent_message_store.py
issue-solver/tests/token_usage/: __init__.py  test_claude_code_agent_integration.py  test_postgres_token_usage_storage.py  test_token_usage.py  test_token_usage_tracker.py  test_worker_integration.py
issue-solver/tests/utils/: __init__.py  test_settings_converter.py
issue-solver/tests/webapi/: conftest.py  (+19 more)
(+580 files in other folders)
