[project]
name = "issue-solver"
version = "0.1.0"
description = "A tool to solve issues in a repository using an autonomous agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
    "fastapi[standard]>=0.115.4",
    "openai>=1.54.3",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.9.2",
    "python-gitlab>=5.3.0",
]

[project.scripts]
issue-solver = "issue_solver:run_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "requests-mock>=1.12.1",
    "ruff>=0.7.3",
]
