[project]
name = "issue-solver"
version = "0.1.6"
description = "A tool to specify, solve issues and review code in a repository using an autonomous agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "docker",
    "fastapi[standard]",
    "gitpython",
    "httpx",
    "mangum",
    "openai",
    "pydantic-settings",
    "pydantic",
    "python-gitlab",
    "boto3",
    "alembic",
    "asyncpg",
    "greenlet",
    "tenacity",
    "pygithub",
    "cryptography",
    "claude-code-sdk",
    "redis",
    "morphcloud>=0.1.85",
]

[project.scripts]
cudu = "issue_solver.cli.__main__:run_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "mypy",
    "pytest-asyncio",
    "pytest-httpserver",
    "pytest",
    "pytest-cov",
    "requests-mock",
    "ruff",
    "testcontainers",
]

[tool.mypy]
plugins = [
    "pydantic.mypy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=issue_solver --cov-report=term --cov-report=html --cov-report=xml"
